[package]
name = "securebit_core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["SecureBit Contributors"]
description = "Platform-agnostic cryptographic kernel for secure peer-to-peer communication"
repository = "https://github.com/securebit/securebit_core"
keywords = ["cryptography", "webrtc", "security", "p2p", "encryption"]
categories = ["cryptography", "network-programming", "security"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# cryptography
aes-gcm = { version = "0.10", features = ["aes"] }
aead = "0.5"
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
p384 = { version = "0.13", features = ["ecdh", "ecdsa", "pkcs8"] }
ecdsa = { version = "0.16", features = ["der"] }
der = { version = "0.7", features = ["alloc"] }
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"

base64 = "0.21"
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
flate2 = { version = "1.0", features = ["zlib"] }
serde_cbor = "0.11"
regex = "1.10"

[dev-dependencies]

